--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='app.css' />
      <style>
         body{
-         background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkBeTeD98-MavQaa1fXMStWjWY2Oav82Q2Ji3T2MAl40Sl6BPW");
+         background-image: url("https://cdn.pixabay.com/photo/2017/10/20/10/58/elephant-2870777_960_720.jpg");
           background-size: cover;
          background-repeat: no-repeat;
 
@@ -29,7 +29,7 @@
         <div class="nav">
             <a class="nav-link" href="/">Home</a>
             <a class="nav-link" href="/ranger">Rangers</a>
-            <a class="nav-link" href="/sightings">Sightings</a>
+<!--            <a class="nav-link" href="/sightings">Sightings</a>-->
             <a class="nav-link" href="/animals">Animals</a>
             <a class="nav-link" href="/location">Locations</a>
         </div>
