--- a/src/main/resources/app.css
+++ b/src/main/resources/app.css
@@ -1,6 +1,6 @@
 body{
  background-image: url("https://cdn.pixabay.com/photo/2017/10/20/10/58/elephant-2870777_960_720.jpg");
- background-position: center;
+ background-position: cover;
  background-size: cover;
 background-repeat: no-repeat;
 }
@@ -10,9 +10,9 @@ background-repeat: no-repeat;
 
 .out-line{
    background: none;
-   border-radius: 12px;
+   /*border-radius: 12px;*/
    border: 1px solid #fff;
-   color: grey;
+   color: skyblue;
    margin-bottom: 20px;
 }
 .btn{
